# wolf-game

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  sample.ipynb
config/: models.yaml
data/logs/: basic_demo.jsonl
doc/: design.md  langchain_usage_quickstart.md
experiments/: README.md  __init__.py  runner.py
experiments/basic_demo/: __init__.py  config.yaml  prompts.yaml  run.py
experiments/basic_demo/logs/: basic_demo.jsonl
experiments/template_4player/: config.yaml  helpers.py  prompts.yaml  readme.md  run.py
experiments/template_4player/analysis/: analysis.ipynb  viewer_app.py
experiments/template_4player_new/: config.yaml  run.py
experiments/template_mm_4player/: config.yaml  helpers.py  prompts.yaml  readme.md  run.py
experiments/template_mm_4player/analysis/: analysis.ipynb  viewer_app.py
experiments/templete_4player/: config.yaml  prompts.yaml  run.py
notebooks/langchain_basics/: gemini_client.ipynb  ollama_cloudflare_streaming.ipynb  remote_ollama_client.ipynb
scripts/: run_chat.py
src/: __init__.py
src/api/: __init__.py  client.py
src/config/: __init__.py  env.py  models.py
src/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
